--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.back1 {
+  background: linear-gradient(
+    45deg,
+    rgb(249, 205, 117),
+    rgb(255, 173, 132),
+    rgb(255, 143, 143),
+    rgb(250, 130, 160)
+  );
+}
+.back2 {
+  background: linear-gradient(
+    45deg,
+    rgb(0, 113, 106),
+    rgb(0, 133, 173),
+    rgb(10, 85, 117),
+    rgb(12, 36, 92)
+  );
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Container {
+  width: 20rem;
+  margin: 0 auto;
+  box-shadow: 0px 3px 10px grey;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+}
+
+.bg1 {
+  background: rgb(247, 210, 136);
+}
+
+.bg2 {
+  background: rgb(17, 0, 61);
+}
+
+.Button {
+  background-color: rgba(164, 194, 242, 0.4);
+  border: none;
+  text-align: center;
+  padding: 10px 20px;
+  display: inline-block;
+  font-size: 16px;
+  width: 4rem;
+}
+
+.Button:hover {
+  background-color: rgba(103, 113, 152, 0.5);
+}
+
+input[type="text"] {
+  width: 100%;
+  border: none;
+  background-color: rgb(204, 198, 198);
+  text-align: right;
+}
+
+.screen {
+  width: 90%;
+  background-color: rgb(204, 198, 198);
 }
